<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Vento 2.0</string>
    <string name="event_title">Event Title</string>
    <string name="event_description">Description</string>
    <string name="event_startdate">Start Date</string>
    <string name="event_enddate">End Date</string>
    <string name="event_location">Location</string>
    <string name="attend">Attend</string>
    <string name="go_back">Go back</string>
    <string name="create_event">Create Event</string>
    <string name="create_title">Title</string>
    <string name="create_description">Description</string>
    <string name="create_location">Location</string>
    <string name="create_participators">Number of Participators</string>

    <string name="delete_event">Delete Event</string>

    <string name="create_category">Category</string>
    <string name="create_start_date">Start Date</string>
    <string name="create_end_date">End Date</string>
    <string name="create_image">Image</string>
    <string name="discard_event">Discard</string>
    <string name="submit">Submit</string>

    <string name="log_in_title">Log In</string>
    <string name="email_placeholder">email</string>
    <string name="password_placeholder">password</string>
    <string name="log_in_button">Log In</string>
    <string name="dont_have_account_button">Don\'t have an account?</string>

    <string name="press_for_details">Press for Details</string>


    <string name="sign_up_title">Sign Up</string>
    <string name="first_name_placeholder">first name</string>
    <string name="surname_placeholder">surname</string>
    <string name="confirm_password">confirm password</string>
    <string name="confirm_password_placeholder">confirm password</string>
    <string name="image_placeholder">image</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="already_have_account_button">Already have an account?</string>

    <string name="hello_user">Hello, User!</string>
    <string name="rating">Rating</string>

    <string name="review">Review</string>
    <string name="write_review">Write review</string>
    <string name="see_reviews">See reviews</string>
    <string name="rating_slider">Rate from very bad to very good (0-10)</string>
    <string name="post_review">Post review</string>
    <string name="discard_review">Discard review</string>

    <string name="explore_events">Explore Events</string>
    <string name="my_events">My Events</string>
    <string name="my_timeline">My Timeline</string>
    <string name="my_messages">My Messages</string>
    <string name="search_users">Search Users</string>
    <string name="log_out">Log Out</string>
    <string name="map">Events Map</string>

    <string name="chip_best">Order by Bests</string>
    <string name="chip_attended_past">Attended in the past</string>
    <string name="chip_attending_future">Attending in the future</string>
    <string name="chip_created_by_me">My Events</string>

    <string name="stop_attending">Stop Attending</string>

</resources>