<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/explore_events" />
        <item
            android:id="@+id/nav_my_events"
            android:title="@string/my_events" />
        <item
            android:id="@+id/nav_my_timeline"
            android:title="@string/my_timeline" />
        <item
            android:id="@+id/nav_my_messages"
            android:title="@string/my_messages" />
        <item
            android:id="@+id/nav_search_users"
            android:title="@string/search_users" />
        <item
            android:id="@+id/nav_events_map"
            android:title="@string/map"/>
        <item
            android:id="@+id/nav_log_out"
            android:title="@string/log_out"/>
    </group>
</menu>