<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/attend_event_imageview"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"/>
        <TextView
            android:id="@+id/event_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_title"
            android:textSize="30sp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>

        <TextView
            android:id="@+id/event_description_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_description"
            android:textSize="12sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>
        <TextView
            android:id="@+id/event_startdate_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_startdate"
            android:textSize="12sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>
        <TextView
            android:id="@+id/event_enddate_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_enddate"
            android:textSize="12sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>
        <TextView
            android:id="@+id/event_location_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_location"
            android:textSize="12sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/stop_attend_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/blue_button"
        android:text="@string/stop_attending"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/go_back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/red_button"
        android:text="@string/go_back"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>