<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="190dp"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:src="@drawable/vento_reviews"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review"
                android:layout_marginTop="25dp"
                android:layout_marginStart="12dp"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/review_text_et"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/write_review"
                android:padding="10dp"
                android:gravity="start"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating_slider"
                android:layout_marginTop="12dp"
                android:layout_marginStart="12dp"
                android:textSize="20sp"/>

            <!-- Discrete slider -->
            <com.google.android.material.slider.Slider
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:valueFrom="0.0"
                android:valueTo="10.0"
                android:stepSize="1.0"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">
            <Button
                android:id="@+id/post_review_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:backgroundTint="@color/green_button"
                android:text="@string/post_review" />

            <Button
                android:id="@+id/discard_review_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                android:backgroundTint="@color/red_button"
                android:text="@string/discard_review" />
        </LinearLayout>



    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>