<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--Create Event-->
                <TextView
                    android:id="@+id/create_event_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:textSize="36dp"
                    android:text="@string/create_event"/>

                <!--Title-->
                <TextView
                    android:id="@+id/create_title_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/create_title"/>

                <EditText
                    android:id="@+id/create_title_et"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/create_title"
                    android:padding="10dp" />

                <!--Description-->
                <TextView
                    android:id="@+id/create_description_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/create_description"/>

                <EditText
                    android:id="@+id/create_description_et"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/create_description"
                    android:padding="10dp" />

                <!--Location-->
                <TextView
                    android:id="@+id/create_location_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/create_location"/>

                <EditText
                    android:id="@+id/create_location_et"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/create_location"
                    android:padding="10dp" />

                <!--Participators-->
                <TextView
                    android:id="@+id/create_participators_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/create_participators"/>

                <EditText
                    android:id="@+id/create_participators_et"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/create_participators"
                    android:padding="10dp" />


                <!--Category-->
                <TextView
                    android:id="@+id/create_category_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/create_category"/>

                <Spinner
                    android:id="@+id/category_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"/>

                <!--Start Date-->
                <TextView
                    android:id="@+id/create_start_date_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/create_start_date"/>

                <DatePicker
                    android:id="@+id/start_date_datePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="12dp"
                    android:datePickerMode="calendar"/>

                <!--End Date-->
                <TextView
                    android:id="@+id/create_end_date_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/create_end_date"/>

                <DatePicker
                    android:id="@+id/end_date_datePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="12dp"
                    android:datePickerMode="calendar"/>

                <!--Image-->
                <TextView
                    android:id="@+id/create_image_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/create_image"/>

                <EditText
                    android:id="@+id/create_image_et"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/create_image"
                    android:padding="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp">
                <Button
                    android:id="@+id/discard_event_button"
                    android:layout_width="190dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/red_button"
                    android:text="@string/discard_event">
                </Button>
                <Button
                    android:id="@+id/create_event_button"
                    android:layout_width="190dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/green_button"
                    android:text="@string/create_event">
                </Button>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>